Revert "Fix css code for displaying on mobile view"
This reverts commit 9672f998f6b687001fe0e11984f31f06683bc16d.

--- a/client/src/app/contextpacks/contextpack-card.component.scss
+++ b/client/src/app/contextpacks/contextpack-card.component.scss
@@ -3,7 +3,7 @@ span.contextpack-card-wordlists{
   background-color: rgba(0, 225, 255, 0.089);
   border: 5px solid rgb(89, 0, 255);
   padding: 10px;
-  width: 90%;
+  width: 600px;
   margin: 5px;
 }
 .mat-card{
@@ -16,7 +16,7 @@ span.contextpack-card-nouns{
   border: 5px solid rgb(132, 0, 255);
   padding: 10px;
   margin: 5px;
-  width: 90%;
+  width: 600px;
   word-wrap: break-word;
   display: flex;
 }
@@ -28,7 +28,7 @@ span.contextpack-card-misc{
   border: 5px solid rgb(255, 0, 200);
   padding: 10px;
   margin: 5px;
-  width: 90%;
+  width: 600px;
   word-wrap: break-word;
   display: flex;
 
@@ -39,7 +39,7 @@ span.contextpack-card-adjectives{
   background-color: rgba(0, 255, 0, 0.11);
   border: 5px solid rgb(9, 255, 0);
   padding: 10px;
-  width: 90%;
+  width: 600px;
   margin: 5px;
   word-wrap: break-word;
   display: flex;
@@ -51,7 +51,7 @@ span.contextpack-card-verbs{
   background-color: rgba(255, 166, 0, 0.274);
   border: 5px solid rgb(255, 123, 0);
   padding: 10px;
-  width: 90%;
+  width: 600px;
   margin: 5px;
   word-wrap: break-word;
   display: flex;
